--- a/Manuscript/FinalDraft3/msv10.tex
+++ b/Manuscript/FinalDraft3/msv10.tex
@@ -331,11 +331,11 @@ Asymmetric fixed points appear in bifurcations as a critical value of the strayi
 As the noise in the system is negligible for the purposes of the bifurcation diagram we can use concepts of deterministic bifurcation theory. 
 Based on the Jacobian eigenvalues we conjecture that these bifurcations are fold bifurcations. 
 In a generic fold bifurcation of maps, two new fixed points are created, one of which is unstable, while the other is stable. 
-In the present case, two of these bifurcations occur at the same time, one which creates fixed points where the first population is dominant in the stable fixed point, whereas the second bifurcation creates the mirror-image fixed points where the second population is dominant in the stable fixed point.      
+In the present case, two of these bifurcations occur at the same time, one which creates fixed points where the first population is dominant in the stable fixed point, whereas the second bifurcation creates the mirror-image fixed points where the second population is dominant.      
 
 In the asymmetric states the dominant population is well-adapted and reproduces quickly. 
 The (small) fraction of this population that strays to the subordinate site constitutes a considerable inflow, such that the population in the subordinate site is not as well adapted, which in turn reduces reproduction and stabilizes the asymmetry. 
-In a regime found at low straying rates (regime I) both the symmetric and the asymmetric states are stable fixed points of the system (figure \ref{fig:traj}, dashed lines). 
+In a regime found at low straying rates (regime I) both the symmetric and the asymmetric states are stable fixed points of the system (figure \ref{fig:traj}, purple points). 
 Which of these fixed points is approached depends on the initial conditions. 
 
 As we increase straying, the asymmetric states eventually collide with the stable symmetric state. 
@@ -346,7 +346,7 @@ However, if the straying is increased further the imbalance in population sizes 
 Eventually we reach a critical point where the stable asymmetric fixed points become symmetric and collide with the unstable symmetric fixed point. 
 The system undergoes a supercritical pitchfork bifurcation, in which the stable asymmetric fixed points vanish while the unstable symmetric fixed point is stabilized. 
 After this bifurcation the symmetric fixed point is the only attractor in the system. 
-Importantly, we find that increasing the asymmetry in the vital rates of populations between sites does not significantly alter the presence or position of these different regimes (figure \ref{symmetry}).
+Importantly, we find that increasing the asymmetry in the vital rates of populations between sites does not significantly alter the presence or position of these different regimes (figure \ref{fig:symmetry}).\\
 
 
 %ROBUSTNESS
@@ -1207,7 +1207,7 @@ Main: The absolute difference in stable state densities averaged across interval
 singlelinecheck=false
 }
 \centering
-\includegraphics[width=0.75\textwidth]{fig_rtpe_ddm.pdf}
+\includegraphics[width=1\textwidth]{fig_rtpe_ddm.pdf}
 \caption{
 Measures of metapopulation robustness for the density-dependent straying model as a function of individual straying $m_0$ and the strength of collective behaviour $C$ (note the $\rm log_{10}$ scale, including 
 a) the Portfolio effect,
@@ -1224,7 +1224,7 @@ d) the time to recovery following the extinction of the dominant population.
 singlelinecheck=false
 }
 \centering
-\includegraphics[width=0.75\textwidth]{fig_hysteresis_ddm.pdf}
+\includegraphics[width=1\textwidth]{fig_hysteresis_ddm.pdf}
 \caption{
 Alternative stable state regimes I (gray) and II (black) as a function of individual straying $m_0$ and the strength of collective behaviour $C$ (note the $\rm log_{10}$ scale).
 Regime I signifies parameter space where there is either 1) an intermediate-density, symmetric, steady state, or 2) an asymmetric dominant/subordinate density.
