--- a/manuscript/FinalDraft3/aa_kevin.bib
+++ b/manuscript/FinalDraft3/aa_kevin.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Sun, 17 Dec 2017.
+%% Created using Papers on Tue, 23 Jan 2018.
 %% http://papersapp.com/papers/
 
 @article{Anonymous:2015gf,
@@ -849,7 +849,7 @@ pages = {1755}
 author = {Berdahl, Andrew and Kao, A and Flack, Jessica and Westley, Peter A H and Codling, E and Couzin, I D and Dell, Anthony I and Biro, D},
 title = {{Collective animal navigation and migratory culture: from theoretical models to empirical evidence.}},
 journal = {Philos. T. Roy. Soc. B},
-year = {2017},
+year = {2018},
 volume = {This volume}
 }
 
@@ -1274,6 +1274,17 @@ volume = {3},
 number = {5},
 pages = {340--348},
 month = apr
+}
+
+@article{Gibert:2016cu,
+author = {Gibert, Jean P},
+title = {{The effect of phenotypic variation on metapopulation persistence}},
+journal = {Population Ecology},
+year = {2016},
+volume = {58},
+number = {3},
+pages = {345--355},
+month = may
 }
 
 @article{Carlson:2014is,
@@ -1886,6 +1897,14 @@ volume = {8},
 number = {12},
 pages = {e81916},
 month = dec
+}
+
+@article{Westley:uh,
+author = {Westley, Peter A H and Berdahl, A and Torney, Colin J and Biro, D},
+title = {{Emerging study of collective movement ecology}},
+journal = {Philos. T. Roy. Soc. B},
+year = {2018},
+volume = {This volume}
 }
 
 @article{Whitlock:2005hu,
